--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --verbose",
-    "server": "nodemon index.js",
+    "server": "nodemon",
     "start": "node index.js"
   },
   "repository": {
